# Predictive-Maintenance-Edge-AI-System

./: .gitignore  .pre-commit-config.yaml  0778.py  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
demo/: streamlit_app.py
scripts/: test_system.py  train.py  validate_structure.py
src/: __init__.py
src/export/: __init__.py  edge_exporter.py
src/models/: __init__.py  lstm_model.py
src/pipelines/: __init__.py  data_pipeline.py
src/utils/: __init__.py  evaluation.py
tests/: test_models.py
